[TERMINAL] Fixed prompt alignment, added CSS to gitignore

--- a/src/stylesheets/partials/_terminal.sass
+++ b/src/stylesheets/partials/_terminal.sass
@@ -13,6 +13,7 @@
       list-style-type: none
 
   .prompt
+    text-align: left
     form
       input
         &[type="text"]
